--- a/CBI/fzf/module.lua.tmpl
+++ b/CBI/fzf/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: cli, shell")
 whatis("URL: https://github.com/junegunn/fzf, https://github.com/junegunn/fzf/blob/master/CHANGELOG.md (changelog) https://github.com/junegunn/fzf/wiki (docs)")
 whatis([[
 Description: fzf is a general-purpose command-line fuzzy finder. It's an interactive Unix filter for command-line that can be used with any list; files, command history, processes, hostnames, bookmarks, git commits, etc.
-Examples: `fzf --version` and `emacs \"$(fzf)\"`. Note: To install tab completions and key bindinds to your shell, call `$FZF_HOME/install`. To uninstall, use `$FZF_HOME/uninstall`.
+Examples: `fzf --version` and `emacs "$(fzf)"`. Note: To install tab completions and key bindinds to your shell, call `$FZF_HOME/install`. To uninstall, use `$FZF_HOME/uninstall`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
