More stray escaped quotes

--- a/CBI/trimgalore/module.lua.tmpl
+++ b/CBI/trimgalore/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing, genome")
 whatis("URL: https://github.com/FelixKrueger/TrimGalore, https://github.com/FelixKrueger/TrimGalore/blob/master/Changelog.md (changelog)")
 whatis([[
 Description: A wrapper around Cutadapt and FastQC to consistently apply adapter and quality trimming to FastQ files, with extra functionality for RRBS data.
-Examples: `trim_galore --version`, `trim_galore --help`, and `more \"$TRIMGALORE_HOME/Docs/Trim_Galore_User_Guide.md\"`.
+Examples: `trim_galore --version`, `trim_galore --help`, and `more "$TRIMGALORE_HOME/Docs/Trim_Galore_User_Guide.md"`.
 ]])
 
 depends_on("cutadapt")
