--- a/CBI/mutect/module.lua.tmpl
+++ b/CBI/mutect/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing, genome")
 whatis("URL: https://software.broadinstitute.org/cancer/cga/mutect, https://github.com/broadinstitute/mutect (source code)")
 whatis([[
 Description: MuTect is a method developed at the Broad Institute for the reliable and accurate identification of somatic point mutations in next generation sequencing data of cancer genomes.
-Examples: `mutect`, which is short for `java -Xmx2g -jar \"$MUTECT_JAR\"`.
+Examples: `mutect`, which is short for `java -Xmx2g -jar "$MUTECT_JAR"`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
