--- a/CBI/blat/module.lua.tmpl
+++ b/CBI/blat/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing, alignment")
-whatis("URL: https://genome.ucsc.edu/goldenPath/help/blatSpec.html")
+whatis("URL: https://genome.ucsc.edu/goldenPath/help/blatSpec.html (docs), https://genome.ucsc.edu/FAQ/FAQblat.html (faq), https://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/blat/ (download)")
 whatis([[
 Description: BLAT - client and server combined into a single program, first building the index, then using the index, and then exiting.
 Examples: `blat`
