--- a/CBI/rclone/module.lua.tmpl
+++ b/CBI/rclone/module.lua.tmpl
@@ -4,10 +4,10 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: files, transfers")
-whatis("URL: https://rclone.org/, https://rclone.org/changelog/ (changelog) https://github.com/rclone/rclone (source code)")
+whatis("URL: https://rclone.org/, https://rclone.org/changelog/ (changelog), https://github.com/rclone/rclone (source code)")
 whatis([[
 Description: Rclone is a command line program to sync files and directories to and from a large number of end points on the local file system, or remote file systems, and in the cloud.
-Examples: `rclone --version`, `rclone --help`, `rclone config`, and `info rclone`.
+Examples: `rclone --version`, `rclone --help`, `rclone config`, and `man rclone`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
@@ -15,4 +15,4 @@ local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", home)
-prepend_path("MANPATH", home)
+prepend_path("MANPATH", pathJoin(home, "share", "man"))
