--- a/CBI/rstudio-server-controller/module.lua.tmpl
+++ b/CBI/rstudio-server-controller/module.lua.tmpl
@@ -15,10 +15,17 @@ Warning: This is work under construction!
 
 depends_on("r")
 depends_on("rstudio-server")
-try_load("expect")
+
+-- Authenticate via one-time random password by default?
+if isDir("/wynton") then
+  -- Update default to: rsc start --auth=auth-via-env --random-password
+  pushenv("RSC_AUTH", "auth-via-env")
+  pushenv("RSC_PASSWORD", "random")
+else
+  try_load("expect")
+end
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
-
