rsc: mention 'rsc stop' as an example too

--- a/CBI/rstudio-server-controller/module.lua.tmpl
+++ b/CBI/rstudio-server-controller/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: programming, R, RStudio Server, GUI")
 whatis("URL: https://github.com/UCSF-CBI/rstudio-server-controller, https://github.com/UCSF-CBI/rstudio-server-controller/blob/main/NEWS.md (changelog)")
 whatis([[
 Description: The RStudio Server Controller (RSC) is a tool for launching a personal instance of the RStudio Server on a Linux machine, which then can be access via the web browser, either directly or via SSH tunneling.
-Examples: `rsc --help`, and `rsc start`.
+Examples: `rsc --help`, `rsc start`, and `rsc stop`.
 Warning: This is work under construction!
 ]])
 
