--- a/CBI/wip-conda-stage/module.lua.tmpl
+++ b/CBI/wip-conda-stage/module.lua.tmpl
@@ -10,6 +10,7 @@ whatis("URL: https://github.com/HenrikBengtsson/conda-stage, https://github.com/
 whatis([[
 Description: The 'conda-stage' tool takes the active conda environment and stage it to local disk. Working with a conda environment on local disk can greatly improve the performance as local disk is often much faster than a global, network-based file system, including multi-tenant parallel file systems such as BeeGFS and Lustre often found in high-performance compute (HPC) environments.
 Examples: `conda-stage`, `conda-stage --unstage`, `conda-stage --version`, `conda-stage --help`.
+Warning: This is work under construction. It may be removed at any time! /HB 2022-04-13
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
