snpeff: prepare for v5.1, which requires Java (>= 12)

--- a/CBI/snpeff/module.lua.tmpl
+++ b/CBI/snpeff/module.lua.tmpl
@@ -16,6 +16,10 @@ local name = "snpEff"
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
+if (version >= "5.1") then
+  depends_on("openjdk/17")
+end
+
 pushenv("SNPEFF_HOME", home)
 
 local jarfile = pathJoin(home, "snpEff", "snpEff.jar")
