snpeff: alias now uses $SNPEFF_HOME at run-time [#59]

--- a/CBI/snpeff/module.lua.tmpl
+++ b/CBI/snpeff/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: high-throughput sequencing")
 whatis("URL: https://pcingola.github.io/SnpEff/, https://github.com/pcingola/SnpEff/tags (changelog), https://github.com/pcingola/SnpEff (source code)")
 whatis([[
 Description: SnpEff is a variant annotation and effect prediction tool. It annotates and predicts the effects of variants on genes (such as amino acid changes).
-Examples: `snpEff -help`, `SnpSift -help`,  and `ClinEff -help`, which are aliases for `java -jar $SNPEFF_HOME/snpEff/snpEff.jar -help`, `java -jar $SNPEFF_HOME/snpEff/SnpSift.jar -help`, and `java -jar $SNPEFF_HOME/clinEff/ClinEff.jar -help`.
+Examples: `snpEff -help`, `SnpSift -help`,  and `ClinEff -help`, which are aliases for `java -jar $SNPEFF_HOME/snpEff/snpEff.jar -help`, `java -jar $SNPEFF_HOME/snpEff/SnpSift.jar -help`, and `java -jar $SNPEFF_HOME/ClinEff/ClinEff.jar -help`.
 ]])
 
 local name = "snpEff"
@@ -24,15 +24,15 @@ pushenv("SNPEFF_HOME", home)
 
 local jarfile = pathJoin(home, "snpEff", "snpEff.jar")
 pushenv("SNPEFF", jarfile)
-set_alias("snpEff", "java -jar " .. jarfile)
+set_alias("snpEff", "java -jar \"$SNPEFF_HOME/snpEff/snpEff.jar\"")
 
 local jarfile = pathJoin(home, "snpEff", "SnpSift.jar")
 pushenv("SNPSIFT", jarfile)
-set_alias("SnpSift", "java -jar " .. jarfile)
+set_alias("SnpSift", "java -jar \"$SNPEFF_HOME/snpEff/SnpSift.jar\"")
 
 local jarfile = pathJoin(home, "clinEff", "ClinEff.jar")
 pushenv("CLINEFF", jarfile)
-set_alias("ClinEff", "java -jar " .. jarfile)
+set_alias("ClinEff", "java -jar \"$SNPEFF_HOME/ClinEff/ClinEff.jar\"")
 
 -- Tweak Java for the current environment
 depends_on("java-tweaks")
