picard: undo debub

--- a/CBI/picard/module.lua.tmpl
+++ b/CBI/picard/module.lua.tmpl
@@ -18,7 +18,7 @@ if (version_x == "1") then
   depends_on("openjdk/1.6.0")
 else
   -- As of version 2.0.1 (Nov. 2015) Picard requires Java 1.8 (jdk8u66)
---  depends_on("openjdk/1.8.0")
+  depends_on("openjdk/1.8.0")
 end
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
