mutect: alias now uses $MUTECT_HOME at run-time [#59]

--- a/CBI/mutect/module.lua.tmpl
+++ b/CBI/mutect/module.lua.tmpl
@@ -27,9 +27,9 @@ end
 
 name = "muTect"
 pushenv("MUTECT_HOME", home)
-local jarfile = pathJoin(home, name .. "-" .. version .. ".jar")
-pushenv("MUTECT_JAR", jarfile)
-set_alias("mutect", "java -Xmx2g -jar " .. jarfile)
+local jarfile = name .. "-" .. version .. ".jar"
+pushenv("MUTECT_JAR", pathJoin(home, jarfile))
+set_alias("mutect", "java -Xmx2g -jar \"$MUTECT_HOME/" .. jarfile .. "\"")
 
 -- Tweak Java for the current environment
 depends_on("java-tweaks")
