--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -41,8 +41,10 @@ if (v >= "4.1.0") then
   local gv = string.gsub(version, v, "")
   gv = string.gsub(gv, "-alpha", "")
   gv = string.gsub(gv, "-beta", "")
+  gv = string.gsub(gv, "-rc", "")
   gv = string.gsub(gv, "-gcc", "")
-  if (gv > "4") then
+  gv = tonumber(gv)
+  if (gv > 4) then
     r_libs_user = r_libs_user .. "-gcc" .. gv
     if has_devtoolset(gv) then
       depends_on("scl-devtoolset/" .. gv)
