--- a/CBI/cmake/module.lua.tmpl
+++ b/CBI/cmake/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: development, make")
-whatis("URL: https://cmake.org/, https://github.com/Kitware/CMake/releases")
+whatis("URL: https://cmake.org/, https://cmake.org/cmake/help/latest/release/index.html (changelog) https://github.com/Kitware/CMake/releases (download)")
 whatis([[
 Description: CMake is cross-platform free and open-source software for managing the build process of software using a compiler-independent method. It supports directory hierarchies and applications that depend on multiple libraries.
 Examples: `cmake --version`.
