--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -78,8 +78,10 @@ pushenv("R_LIBS_USER", r_libs_user)
 
 -- WORKAROUND: utils::download.file(), which is for instance used by install.packages()
 -- have a built-in timeout at 60 seconds.  This might be too short for some larger
--- Bioconductor annotation packages, e.g. 'SNPlocs.Hsapiens.dbSNP150.GRCh38' (2.10 GB).
-pushenv("R_DEFAULT_INTERNET_TIMEOUT", "180") -- 3 minutes timeout instead of 1 minute
+-- Bioconductor annotation packages, e.g.
+--  'SNPlocs.Hsapiens.dbSNP150.GRCh38' (2.10 GB)
+--  'MafDb.gnomAD.r2.1.GRCh38' (6.04 GB)
+pushenv("R_DEFAULT_INTERNET_TIMEOUT", "600") -- 10 minutes timeout instead of 1 minute
 
 -- WORKAROUND: gert 1.1.0 (2021-01-25) installs toward a static libgit2 that
 -- gives 'Illegal instruction' on some hosts (with older CPUs?)
