--- a/CBI/wip-miniconda3/module.lua.tmpl
+++ b/CBI/wip-miniconda3/module.lua.tmpl
@@ -12,7 +12,7 @@ whatis("Keywords: files, utility")
 whatis("URL: https://docs.conda.io/en/latest/, https://docs.conda.io/en/latest/miniconda.html (docs), https://github.com/conda/conda/blob/master/CHANGELOG.md (changelog), https://github.com/conda/conda (source code)")
 whatis([[
 Description: Miniconda is a free minimal installer for conda. It is a small, bootstrap version of Anaconda that includes only conda, Python, the packages they depend on, and a small number of other useful packages, including pip, zlib and a few others.
-Examples: `conda --version`, `conda create --name=myenv`, `conda info`, `conda activate myenv`, and `conda deactive`.
+Examples: `conda --version`, `conda create --name=myenv`, `conda env list`, `conda activate myenv`, `conda info`, and `conda deactive`.
 Warning: For now, this module only work in Bash. Also, do _not_ do `conda init`. If you do by mistake, please undo by `conda init --reverse`.
 
 ]] .. "WARNING: " .. warning .. "\n"
