HELP: Typo; startup() -> setup()

--- a/CBI/bats-support/module.lua.tmpl
+++ b/CBI/bats-support/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: bash, shell, testing")
 whatis("URL: https://github.com/bats-core/bats-support, https://github.com/bats-core/bats-support/releases (changelog), https://bats-core.readthedocs.io/en/stable/faq.html?highlight=assert#how-can-i-use-helper-libraries-like-bats-assert (documentation)")
 whatis([[
 Description: This is a supporting library providing common functions to test helper libraries written for Bats.
-Examples: In Bats `startup()` function: `load "${BATS_SUPPORT_HOME}/load.bash"`
+Examples: In Bats `setup()` function: `load "${BATS_SUPPORT_HOME}/load.bash"`
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
