Add keywords 'cli' and 'tui', where applicable

--- a/CBI/bat/module.lua.tmpl
+++ b/CBI/bat/module.lua.tmpl
@@ -5,7 +5,7 @@ bat: A cat(1) Clone with Syntax Highlighting and Git Integration
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: utility, file viewer")
+whatis("Keywords: utility, file viewer, cli, tui")
 whatis("URL: https://github.com/sharkdp/bat, https://github.com/sharkdp/bat/blob/master/CHANGELOG.md (changelog)")
 whatis([[
 Description: A cat(1) clone with syntax highlighting and Git integration.
