--- a/CBI/byobu/module.lua.tmpl
+++ b/CBI/byobu/module.lua.tmpl
@@ -5,7 +5,7 @@ byobu: Elegant Enhancement of the Otherwise Functional, Plain, Practical GNU Scr
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: terminal, SSH")
+whatis("Keywords: terminal, SSH, cli, tui")
 whatis("URL: https://www.byobu.org/, https://bazaar.launchpad.net/~kirkland/byobu/trunk/view/head:/debian/changelog (changelog), https://github.com/dustinkirkland/byobu (source code)")
 whatis([[
 Description: Byobu is an elegant enhancement of the otherwise functional, plain, practical GNU Screen. Byobu includes an enhanced profile, configuration utilities, and system status notifications for the GNU screen window manager as well as the Tmux terminal multiplexer.
