--- a/CBI/emacs/module.lua.tmpl
+++ b/CBI/emacs/module.lua.tmpl
@@ -5,7 +5,7 @@ GNU Emacs: An Extensible, Customizable, Free/Libre Text Editor
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: editor, text")
+whatis("Keywords: editor, text, cli, tui")
 whatis("URL: https://www.gnu.org/software/emacs/, https://www.gnu.org/savannah-checkouts/gnu/emacs/emacs.html#Releases (changelog)")
 whatis([[
 Description: At its core is an interpreter for Emacs Lisp, a dialect of the Lisp programming language with extensions to support text editing.
