--- a/CBI/fzf/module.lua.tmpl
+++ b/CBI/fzf/module.lua.tmpl
@@ -5,7 +5,7 @@ fzf: A Command-Line Fuzzy Finder
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: cli, shell")
+whatis("Keywords: , cli, tui, shell")
 whatis("URL: https://github.com/junegunn/fzf, https://github.com/junegunn/fzf/wiki (documentation), https://github.com/junegunn/fzf/blob/master/CHANGELOG.md (changelog), https://github.com/junegunn/fzf/releases (download)")
 whatis([[
 Description: fzf is a general-purpose command-line fuzzy finder. It's an interactive Unix filter for command-line that can be used with any list; files, command history, processes, hostnames, bookmarks, git commits, etc.
