--- a/CBI/up/module.lua.tmpl
+++ b/CBI/up/module.lua.tmpl
@@ -5,7 +5,7 @@ up: The Ultimate Plumber
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: utility, cli")
+whatis("Keywords: utility, cli, tui")
 whatis("URL: https://github.com/akavel/up, https://github.com/akavel/up/releases (changelog)")
 whatis([[
 Description: A tool for writing Linux pipes in a terminal-based UI interactively, with instant live preview of command results. Interactively and incrementally explore textual data in Linux using text-processing utils such as grep, sort, cut, paste, awk, wc, perl, etc.  When done, press Ctrl-C to view final pipe commands, or Ctrl-X to save it to file.
