--- a/CBI/asciigenome/module.lua.tmpl
+++ b/CBI/asciigenome/module.lua.tmpl
@@ -5,7 +5,7 @@ ASCIIGenome: Text Only Genome Viewer
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: sequencing, viewer")
+whatis("Keywords: sequencing, viewer, cli, tui")
 whatis("URL: https://github.com/dariober/ASCIIGenome, https://github.com/dariober/ASCIIGenome/blob/master/CHANGELOG.md (changelog), https://asciigenome.readthedocs.io/en/latest/ (documentation)")
 whatis([[
 Description: ASCIIGenome is a genome browser based on command line interface and designed for running from console terminals. Since ASCIIGenome does not require a graphical interface it is particularly useful for quickly visualizing genomic data on remote servers while offering flexibility similar to popular GUI viewers like IGV.
