--- a/CBI/glow/module.lua.tmpl
+++ b/CBI/glow/module.lua.tmpl
@@ -5,7 +5,7 @@ glow: Render Markdown on the CLI, with Pizzazz!
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: utility, file viewer, pager, markdown")
+whatis("Keywords: utility, file viewer, pager, markdown, cli, tui")
 whatis("URL: https://github.com/charmbracelet/glow, https://github.com/charmbracelet/glow/releases (changelog)")
 whatis([[
 Description: Glow is a terminal based markdown reader designed from the ground up to bring out the beauty—and power—of the CLI.  Use it to discover markdown files, read documentation directly on the command line and stash markdown files to your own private collection so you can read them anywhere. Glow will find local markdown files in subdirectories or a local Git repository.
