--- a/CBI/mc/module.lua.tmpl
+++ b/CBI/mc/module.lua.tmpl
@@ -5,7 +5,7 @@ mc: Midnight Commander
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: Programming, Statistics")
+whatis("Keywords: utility, files, cli, tui")
 whatis("URL: https://midnight-commander.org/, https://github.com/MidnightCommander/mc/blob/master/doc/NEWS (changelog), https://github.com/MidnightCommander/mc (source code), https://github.com/MidnightCommander/mc/tags (download)")
 whatis([[
 Description: GNU Midnight Commander is a visual file manager. It's a feature rich full-screen text mode application that allows you to copy, move and delete files and whole directory trees, search for files and run commands in the subshell. Internal viewer and editor are included.
