--- a/CBI/qtop/module.lua.tmpl
+++ b/CBI/qtop/module.lua.tmpl
@@ -5,7 +5,7 @@ qtop: Monitor the State of Queueing Systems, Along with Related Information Rele
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: system, utility")
+whatis("Keywords: system, utility, cli, tui")
 whatis("URL: https://github.com/qtop/qtop, https://github.com/qtop/qtop/blob/master/CHANGELOG.rst (changelog)")
 whatis([[
 Description: `qtop` (pronounced queue-top) is a tool written in order to monitor the state of Queueing Systems, along with related information relevant on HPC & grid clusters. At present it supports PBS, SGE & OAR families. Please help to increase that list in the Python version of the tool, qtop.py!
