--- a/CBI/tmux/module.lua.tmpl
+++ b/CBI/tmux/module.lua.tmpl
@@ -5,7 +5,7 @@ tmux: A Terminal Multiplexer
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: screen, tmux")
+whatis("Keywords: screen, tmux, cli, tui")
 whatis("URL: https://github.com/tmux/tmux/wiki, https://github.com/tmux/tmux/blob/master/CHANGES (changelog), https://github.com/tmux/tmux (source code)")
 whatis([[
 Description: tmux is a terminal multiplexer. It lets you switch easily between several programs in one terminal, detach them (they keep running in the background) and reattach them to a different terminal. And do a lot more.
