--- a/CBI/tree/module.lua.tmpl
+++ b/CBI/tree/module.lua.tmpl
@@ -5,7 +5,7 @@ tree: List Content of Directories in a Tree-like Format
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
-whatis("Keywords: files, utility")
+whatis("Keywords: files, utility, cli")
 whatis("URL: http://mama.indstate.edu/users/ice/tree/, http://mama.indstate.edu/users/ice/tree/changes.html (changelog)")
 whatis([[
 Description: Tree is a recursive directory listing command that produces a depth indented listing of files, which is colorized ala dircolors if the `LS_COLORS` environment variable is set and output is to tty.
