picard: add alias 'PicardCommandLine' to replace old 'picard' (fix #69)

--- a/CBI/picard/module.lua.tmpl
+++ b/CBI/picard/module.lua.tmpl
@@ -9,7 +9,8 @@ whatis("Keywords: sequencing")
 whatis("URL: https://broadinstitute.github.io/picard/, https://github.com/broadinstitute/picard/releases (changelog), https://github.com/broadinstitute/picard (source code)")
 whatis([[
 Description: Picard is a set of command line tools for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.
-Examples: `picard -h`, which is an alias for `java -jar $PICARD_HOME/picard.jar -h`
+Examples: `PicardCommandLine -h`, which is an alias for `java -jar $PICARD_HOME/picard.jar -h`.
+Warning: The old `picard` alias is deprecated. Use `PicardCommandLine` instead.
 ]])
 
 local version_x = string.gsub(version, "[.].*", "")
@@ -24,6 +25,10 @@ end
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 pushenv("PICARD_HOME", home)
+
+-- Aliases
+set_alias("PicardCommandLine", "java -jar \"$PICARD_HOME/picard.jar\"")
+-- Deprecated
 set_alias("picard", "java -jar \"$PICARD_HOME/picard.jar\"")
 
 -- Tweak Java for the current environment
