--- a/CBI/wip-port4me/module.lua.tmpl
+++ b/CBI/wip-port4me/module.lua.tmpl
@@ -16,4 +16,4 @@ Warning: This tool is under development.
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
-prepend_path("PATH", home)
+prepend_path("PATH", pathJoin(home, "bin"))
