--- a/CBI/wip-miniconda3/module.lua.tmpl
+++ b/CBI/wip-miniconda3/module.lua.tmpl
@@ -18,15 +18,6 @@ Warning: For now, this module only work in Bash. Also, do _not_ do `conda init`.
 ]] .. "WARNING: " .. warning .. "\n"
 )
 
--- Assert that user doesn't already have their own conda installation
-if mode() == "load" then
-  -- FIXME: How to skip this if we call 'module load miniconda3-py39' twice?
-  if os.getenv("CONDA_EXE") then
-    LmodError("Cannot load " .. name .. " module, because another conda installation is already active. Have you installed conda on your own? (detected environment variable CONDA_EXE)")
-  end
-  LmodMessage("WARNING: " .. warning)
-end
-
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
@@ -34,11 +25,19 @@ prepend_path("PATH", pathJoin(home, "bin"))
 prepend_path("MANPATH", pathJoin(home, "share", "man"))
 prepend_path("PKG_CONFIG_PATH", pathJoin(home, "lib", "pkgconfig"))
 
--- Emulate what 'conda init' does in ~/.bashrc
-local path = pathJoin(home, "etc", "profile.d")
-local script = pathJoin(path, "conda." .. myShellType())
-if not isFile(script) then
-  LmodError("The " .. name .. " module is not supported for your shell (" .. myShellType() .. "). No such file: " .. script)
-end
-execute{cmd = "source " .. script, modeA = {"load"}}
+if mode() == "load" then
+  -- ASSERT: Make sure there is no other active conda environment
+  if os.getenv("CONDA_EXE") then
+    LmodError("Cannot load " .. name .. " module, because another conda installation is already enabled (detected environment variable CONDA_EXE='" .. os.getenv("CONDA_EXE") .. "'). Have you installed conda on your own? If so, run 'conda config --set auto_activate_base false' and the log out and log back in again.")
+  end
 
+  pushenv("CONDA_EXE", pathJoin(home, "bin", "conda"))
+  pushenv("CONDA_PYTHON_EXE", pathJoin(home, "bin", "python"))
+  pushenv("_CE_M", "")
+  pushenv("_CE_CONDA", "")
+elseif mode() == "unload" then
+  pushenv("CONDA_EXE", false)
+  pushenv("CONDA_PYTHON_EXE", false)
+  pushenv("_CE_M", false)
+  pushenv("_CE_CONDA", false)
+end
