picard: show java version with quotation marks

--- a/CBI/picard/module.lua.tmpl
+++ b/CBI/picard/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing")
 whatis("URL: https://broadinstitute.github.io/picard/, https://github.com/broadinstitute/picard/releases (changelog), https://github.com/broadinstitute/picard (source code)")
 whatis([[
 Description: Picard is a set of command line tools for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.
-Examples: `PicardCommandLine -h`, which is an alias for `java -jar $PICARD_HOME/picard.jar -h`.
+Examples: `PicardCommandLine -h`, which is an alias for `java -jar "$PICARD_HOME/picard.jar" -h`.
 Warning: The old `picard` alias is deprecated. Use `PicardCommandLine` instead.
 ]])
 
