--- a/CBI/quarto/module.lua.tmpl
+++ b/CBI/quarto/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: markdown")
-whatis("URL: https://quarto.org/, https://quarto.org/docs/guide/ (docs), https://github.com/quarto-dev/quarto-cli/releases (changelog), https://github.com/quarto-dev/quarto-cli/tree/v0.9.644 (source code)")
+whatis("URL: https://quarto.org/, https://quarto.org/docs/guide/ (docs), https://github.com/quarto-dev/quarto-cli/releases (changelog), https://github.com/quarto-dev/quarto-cli/ (source code)")
 whatis([[
 Description: Quarto is an open-source scientific and technical publishing system built on Pandoc. Quarto documents are authored using markdown, an easy to write plain text format.
 Examples: `quarto --version` and `quarto --help`.
