bashdb: add version tests

--- a/CBI/bashdb/module.lua.tmpl
+++ b/CBI/bashdb/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: bash, shell, debug")
 whatis("URL: https://bashdb.sourceforge.net/, https://bashdb.sourceforge.net/bashdb.html (documentation), https://sourceforge.net/projects/bashdb/files/bashdb/ (changelog), https://sourceforge.net/p/bashdb/code/ci/master/tree/ (source code), https://sourceforge.net/p/bashdb/bugs/ (issue tracker)")
 whatis([[
 Description: The Bash Debugger Project is a source-code debugger for bash that follows the gdb command syntax.
-Examples: `bashdb --help`, `bash --version`.
+Examples: `bashdb --help`, `bashdb --version`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
